--- a/bower.json
+++ b/bower.json
@@ -14,29 +14,33 @@
         "output"
     ],
     "dependencies": {
-        "purescript-arrays": "^v6.0.1",
-        "purescript-effect": "^v3.0.0",
-        "purescript-either": "^v5.0.0",
-        "purescript-enums": "^v5.0.0",
-        "purescript-foldable-traversable": "^v5.0.1",
-        "purescript-foreign-object": "^v3.0.0",
-        "purescript-form-urlencoded": "^v6.0.2",
-        "purescript-js-uri": "https://github.com/srghma/purescript-js-uri.git#d25d83390ba9cf948f46695b55a5511895b0068c",
-        "purescript-lists": "^v6.0.1",
-        "purescript-maybe": "^v5.0.0",
-        "purescript-newtype": "^v4.0.0",
-        "purescript-ordered-collections": "^v2.0.1",
-        "purescript-partial": "^v3.0.0",
-        "purescript-polyform": "^v0.9.0",
-        "purescript-polyform-batteries-core": "https://github.com/purescript-polyform/batteries-core.git#v0.2.0",
-        "purescript-prelude": "^v5.0.1",
-        "purescript-psci-support": "^v5.0.0",
-        "purescript-record": "^v3.0.0",
-        "purescript-strings": "^v5.0.0",
-        "purescript-test-unit": "^v16.0.0",
-        "purescript-tuples": "^v6.0.1",
-        "purescript-typelevel-prelude": "^v6.0.0",
-        "purescript-unfoldable": "^v5.0.0",
-        "purescript-validation": "^v5.0.0"
+        "purescript-arrays": "^v7.1.0",
+        "purescript-debug": "^v6.0.2",
+        "purescript-effect": "^v4.0.0",
+        "purescript-either": "^v6.1.0",
+        "purescript-enums": "^v6.0.1",
+        "purescript-foldable-traversable": "^v6.0.0",
+        "purescript-foreign-object": "^v4.1.0",
+        "purescript-form-urlencoded": "^v7.0.0",
+        "purescript-heterogeneous": "^v0.6.0",
+        "purescript-js-uri": "https://github.com/purescript-contrib/purescript-js-uri.git#v3.1.0",
+        "purescript-lists": "^v7.0.0",
+        "purescript-maybe": "^v6.0.0",
+        "purescript-newtype": "^v5.0.0",
+        "purescript-ordered-collections": "^v3.0.0",
+        "purescript-partial": "^v4.0.0",
+        "purescript-polyform": "^v0.9.1",
+        "purescript-polyform-batteries-core": "https://github.com/purescript-polyform/batteries-core.git#v0.3.0",
+        "purescript-prelude": "^v6.0.1",
+        "purescript-psci-support": "^v6.0.0",
+        "purescript-record": "^v4.0.0",
+        "purescript-record-extra": "^v5.0.1",
+        "purescript-safe-coerce": "^v2.0.0",
+        "purescript-strings": "^v6.0.1",
+        "purescript-test-unit": "^v17.0.0",
+        "purescript-tuples": "^v7.0.0",
+        "purescript-typelevel-prelude": "^v7.0.0",
+        "purescript-unfoldable": "^v6.0.0",
+        "purescript-validation": "^v6.0.0"
     }
 }
